--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
 	<link rel='stylesheet' href='/bundle.css'>
 
 	<script defer src='/bundle.js'></script>
+	<script id="dsq-count-scr" src="//leja.disqus.com/count.js" async></script>
 </head>
 
 <body>
