--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/bundle.css'>
 
-	<script defer src='/bundle.js'></script>	
+	<script defer src='/bundle.js'></script>
+	<script id="dsq-count-scr" src="//leja.disqus.com/count.js" async></script>
 </head>
 
 <body>
